--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -329,7 +329,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h4><strong>Super Agent </strong>iPhone手機夥伴 搶先下載體驗！</h4>
                     </div>
                     <div class="block-body">
-                        <p>SA團隊歷經半年開發，目前已可提供iOS下載體驗，搭配嶄新設計風格，SA首推兩大功能：</p>
+                        <p>SA團隊歷經半年開發，目前已可提供iOS下載體驗，搭配嶄新設計風格，SA首推三大功能：</p>
                         <p><strong>
                             1.「社區百科」： 開發銷售好幫手，社區大小資訊即時一手掌握<br>
                             2.「數位名片」： 創造業務機會無遠弗屆，創新行銷通路廣結善緣<br>
