--- a/sa_page/templates/sa_index.html
+++ b/sa_page/templates/sa_index.html
@@ -825,6 +825,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span class="line"></span></a>
                         <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
                             class="line"></span></a>
+                        <a href="/sa/events/" data-trigger-page-transition class="nav-link" ><span class="text">活動快訊</span> <span
+                                class="line"></span></a>
                 </nav>
 
                 <div class="right">
