加入events.html並改選單

--- a/sa_page/templates/voting/solution1.html
+++ b/sa_page/templates/voting/solution1.html
@@ -95,7 +95,8 @@
                             target="_blank">產品熱度</span> <span class="line"></span></a> 
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text"
                             target="_blank">點讚GO!</span> <span class="line"></span></a>
-                            <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
+                    <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
+                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
                 </nav>
 
 
@@ -303,7 +304,9 @@
                                 class="line"></span></a>
                         <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
                                     class="line"></span></a>
-                    </nav>
+                        <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text">活動快訊</span> <span
+                                        class="line"></span></a>  
+                                </nav>
 
                     <div class="right">
                         <nav class="footer-sub">
