--- a/sa_page/templates/voting/solution3.html
+++ b/sa_page/templates/voting/solution3.html
@@ -96,7 +96,7 @@
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text"
                             target="_blank">點讚GO!</span> <span class="line"></span></a>
                     <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
-                   
+                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>  
                 </nav>
 
 
@@ -315,7 +315,8 @@
                         <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
                                     class="line"></span></a>
                                 
-
+                        <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text">活動快訊</span> <span
+                                        class="line"></span></a>
                     </nav>
 
                     <div class="right">
