--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -167,7 +167,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="content-split-container background-fixed heightauto" data-section-active data-section="0" data-video-intro>
             <div class="container">
                 <ul class="bxslider">
-                    <li><a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_event_0905.html" target="_blank"><img src="{% static 'assets/img/banners/events_banner_1.png' %}" /></a></li>
+                    <li><a href="https://sinyi-superagent-webapp-test-uscmmvx6lq-de.a.run.app/event/20220905/index.html" target="_blank"><img src="{% static 'assets/img/banners/events_banner_1.png' %}" /></a></li>
                     <!-- <li><img src="assets/img/thumbsupgo/banner2.png" /></li>
                     <li><img src="assets/img/thumbsupgo/banner3.png" /></li> -->
                 </ul>
@@ -177,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div class="row sectiontitle">
                     <h2>活動快訊</h2>
-                    <ul>
+                    <ul class="eventlist">
                         <li>
                             <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_event_0905.html" target="_blank">
                                 <div>
