--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li>
                             <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_event_0905.html" target="_blank">
                                 <div>
-                                    <div class="event-small-cover"><img src="" alt=""></div>
+                                    <div class="event-small-cover"><img src="{% static 'assets/img/banners/event_0905_s-cover.png' %}" /></div>
                                     <div class="content">
                                         <h3 class="eventtitle">SHOW出我的自介送黑金版名片！</h3>
                                         <p class="description">假自假自甲字</p>
