--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -177,22 +177,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div class="row sectiontitle">
                     <h2>活動快訊</h2>
+                </div>
+                <div class="listcontainer">
                     <ul class="eventlist">
                         <li>
-                            <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_event_0905.html" target="_blank">
-                                <div>
+                          
+                            
                                     <div class="event-small-cover"><img src="{% static 'assets/img/banners/event_0905_s-cover.png' %}" /></div>
-                                    <div class="content">
-                                        <h3 class="eventtitle">SHOW出我的自介送黑金版名片！</h3>
-                                        <p class="description">假自假自甲字</p>
-                                        <p class="duration">活動期間 2022/09/05(ㄧ)～2022/09/16(五)</p>
-                                        <a href="#">more</a>
+                                    <div class="eventrow-content">
+                                        <div class="text-wrap">
+                                            <div class="inner-wrap">
+                                                <h3 class="eventtitle">[數位名片2.0] SHOW出我的自介</h3>
+                                                <p class="description">數位名片編輯自我介紹，並通過店長審核。
+                                                    將審核後的數位名片截圖上傳至FB，並hashtag：「#SA數位名片」記得公開分喔！ 就送您活動限定 尊絕黑金版數位名片。</p>
+                                            </div>
+                                            <a class="row-cta" href="#">MORE ></a>
+                                        </div>
+                                            
+                                       <div class="duration">活動期間 2022/09/05(ㄧ)～2022/09/16(五)</div>
+                                        
+                                        
                                     </div>
-                                </div>
-                            </a>
+                           
+
                         </li>
                     </ul>
-                    
                 </div>
             </div>
         </section>
