--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -191,10 +191,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <p class="description">數位名片編輯自我介紹，並通過店長審核。
                                                     將審核後的數位名片截圖上傳至FB，並hashtag：「#SA數位名片」記得公開分喔！ 就送您活動限定 尊絕黑金版數位名片。</p>
                                             </div>
-                                            <a class="row-cta" href="#">MORE ></a>
+                                            <a class="row-cta" target="_blank" href="https://sinyi-superagent-webapp-test-uscmmvx6lq-de.a.run.app/event/20220905/index.html">MORE ></a>
                                         </div>
                                             
-                                       <div class="duration">活動期間 2022/09/05(ㄧ)～2022/09/16(五)</div>
+                                       <div class="duration">活動期間 2022/09/05(ㄧ) 10:00 a.m. ～2022/09/16(五)</div>
                                         
                                         
                                     </div>
@@ -208,6 +208,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
        
 
         <div id="fixedblock">
+            <a id="btnlinkblock" href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" > </a>
             <!-- <div id="fixedblock-toggle-btn"><span class="close"></span></div> -->
             <div class="block-body">
                 <div class="block-title">
