--- a/sa_page/templates/voting.html
+++ b/sa_page/templates/voting.html
@@ -271,6 +271,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </section>
 
         <div id="fixedblock">
+            <a id="btnlinkblock" href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" > </a>
             <!-- <div id="fixedblock-toggle-btn"><span class="close"></span></div> -->
             <div class="block-body">
                 <div class="block-title">
