--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -324,6 +324,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div id="fixedblock">
+                <a id="btnlinkblock" href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" > </a>
                 <!-- <div id="fixedblock-toggle-btn"><span class="close"></span></div> -->
                 <div class="block-body">
                     <div class="block-title">
