--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -86,11 +86,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                
                 <nav class="main">   
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
+                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
                     <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
                     <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">產品熱度</span> <span class="line"></span></a>
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
                     <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
-                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
+
                 </nav>
 
 
@@ -373,13 +374,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <nav class="footer">
 
                         <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
+                        <a href="/sa/events/" data-trigger-page-transition class="nav-link" ><span class="text">活動快訊</span> <span class="line"></span></a>
                         <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
                         <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">產品熱度</span> <span class="line"></span></a>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span class="line"></span></a>
                         <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
                             class="line"></span></a>
-                        <a href="/sa/events/" data-trigger-page-transition class="nav-link" ><span class="text">活動快訊</span> <span
-                                class="line"></span></a>
+                     
                     </nav>
 
                     <div class="right">
