--- a/sa_page/templates/voting/solution1.html
+++ b/sa_page/templates/voting/solution1.html
@@ -87,9 +87,8 @@
                 <a href="/sa/" class="logo"></a>
 
                 <nav class="main">
-                    <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span>
-                        <span class="line"></span></a>
-                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
+                    <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span><span class="line"></span></a>
+                    <a href="/sa/events/" class="nav-link" data-trigger-page-transition><span class="newtag">NEW</span><span class="text" target="_blank">活動快訊</span> <span class="line"></span></a>
                     <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span>
                             <span class="line"></span></a>
                     <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text"
