menu預設展開，兩秒後自動收合

--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -77,7 +77,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML8B9HB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <header>
+    <header class="menu-open">
         <div class="background" data-toggle-menu></div>
 
         <div class="nav-container">
@@ -434,6 +434,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 $(this).toggleClass('open');
                 $(this).siblings('.answer').slideToggle();
             });
+        });
+        $(document).ready(function(){
+            function hidemenu(){
+               $("header.menu-open").removeClass("menu-open");
+            }
+            setTimeout(hidemenu, 2000);
         });
     </script>
 
