--- a/sa_page/static/assets/css/sa.css
+++ b/sa_page/static/assets/css/sa.css
@@ -12772,7 +12772,7 @@ header {
     background-color: #fff;
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
-    max-width: 100%;
+    max-width: 320px;
     -webkit-transition-property: transform, width;
     -webkit-transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-in-out;
@@ -13457,7 +13457,8 @@ header.disabled {
 }
 
 header.menu-open {
-    max-width: calc(100vw - 62px);
+    /* max-width: calc(100vw - 62px); */
+    max-width:320px;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
 }
