--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -85,7 +85,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML8B9HB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <header>
+    <header class="menu-open">
         <div class="background" data-toggle-menu></div>
 
         <div class="nav-container">
@@ -234,14 +234,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
 
-
-
-
-
-
-
-
-
         <footer>
             <div class="inner">
                 <div class="top">
@@ -332,6 +324,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
+        });
+
+
+        $(document).ready(function(){
+            function hidemenu(){
+               $("header.menu-open").removeClass("menu-open");
+                
+                // alert("hihi");
+            }
+            setTimeout(hidemenu, 2000);
         });
     </script>
 
