換qrcode與手刀下載文案

--- a/sa_page/templates/sellingprocess.html
+++ b/sa_page/templates/sellingprocess.html
@@ -326,14 +326,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- <div id="fixedblock-toggle-btn"><span class="close"></span></div> -->
                 <div class="block-body">
                     <div class="block-title">
-                        <h4><strong>Super Agent </strong>iPhone手機夥伴 搶先下載體驗！</h4>
+                        <h4><strong>Super Agent </strong>v0.7.0 有新功能囉！</h4>
                     </div>
                     <div class="block-body">
-                        <p>SA團隊歷經半年開發，目前已可提供iOS下載體驗，搭配嶄新設計風格，SA首推三大功能：</p>
+                        <p>數位名片再進化，自介隨我編！分享FB再送限定黑卡版～<br>有任何想說的話，都歡迎使用SA APP內回饋表單告訴SA小組唷～<br>這次更新：</p>
                         <p><strong>
-                            1.「社區百科」： 開發銷售好幫手，社區大小資訊即時一手掌握<br>
-                            2.「數位名片」： 創造業務機會無遠弗屆，創新行銷通路廣結善緣<br>
-                            3.「買方服務流程」：客戶建檔到推薦帶看，一氣呵成好管理
+                            1.「數位名片」： 自介編輯<br>
+                            2.「意見回饋」：意見表單
                         </strong></p>
                         
     
