更新下載功能說明文字

--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -216,10 +216,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h4><strong>Super Agent </strong>v0.7.0 有新功能囉！</h4>
                 </div>
                 <div class="block-body">
-                    <p>數位名片再進化，自介隨我編！分享FB再送限定黑卡版～<br>有任何想說的話，都歡迎使用SA APP內回饋表單告訴SA小組唷～<br>這次更新：</p>
+                    <p>數位名片再進化，自我介紹隨我編！分享FB再送限定黑卡版數位名片～<br>對SA有任何想說的話，都歡迎使用APP內回饋功能告訴開發團隊唷～<br>這次更新：</p>
                     <p><strong>
-                        1.「數位名片」： 自介編輯<br>
-                        2.「意見回饋」：意見表單
+                        1.「數位名片」：自我介紹文字編輯<br>
+                        2.「意見回饋」
                     </strong></p>
                     
 
