--- a/sa_page/static/scss/thumbsupgo.scss
+++ b/sa_page/static/scss/thumbsupgo.scss
@@ -116,7 +116,7 @@ body.thumbsupgo {
 body.thumbsupgo {
     section.heightauto {
         height: auto;
-        min-height: unset;
+        min-height: calc(100vh - 417px);
         padding-top: 0px;
         padding-bottom: 40px;
     }
