--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -146,6 +146,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </header>
 
+
+    <!--Breadcrumbs-->
     <div class="horizontalstyle">
         <div class="nav-container">
             <div class="top">
