--- a/sa_page/static/assets/css/pd_data.css
+++ b/sa_page/static/assets/css/pd_data.css
@@ -8,7 +8,8 @@ body{
 #d_container {
     display: flex;
     width:100%;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
 }
 /* section */
 section {
@@ -83,7 +84,7 @@ section #l1_s a{
 aside {
     position: relative;
     width:calc(100% - 200px);
-    height:100vh;
+    height: calc(100vh + 130px);
     background: #EDF0F1;
     box-sizing: border-box;
 }
