--- a/sa_page/templates/pd_data.html
+++ b/sa_page/templates/pd_data.html
@@ -136,7 +136,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </ul>
             </nav>
         </section>
-        <aside style="margin-bottom:30px;">
+        <aside >
             <nav>
                 <h1>SA產品數據</h1>
                 <div id="d_nav">
