--- a/sa_page/templates/events.html
+++ b/sa_page/templates/events.html
@@ -85,6 +85,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ML8B9HB"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+
+    <!--navigation-->
     <header class="menu-open">
         <div class="background" data-toggle-menu></div>
 
