--- a/sa_page/templates/sellingprocess.html
+++ b/sa_page/templates/sellingprocess.html
@@ -341,8 +341,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <!-- <a href="#" class="blockbtns">我要回饋</a> -->
                         <!-- <a href="#" class="blockbtns">下載體驗</a> -->
                         <div class="qrcode"><img src="{% static 'assets/img/sa-download.png' %}"></div>
-                        <p class="note"><strong>[ 僅提供 iPhone 手機夥伴下載 ]</strong><br><br> 由於產品團隊採用敏捷式開發，為快速回應需求與動態調整迭代，SA發展過程中將優先鎖定iOS進行開發，請持有iPhone手機夥伴，踴躍下載搶先體驗！
-                        </p>
+                        <p class="note"><strong>[ 目前僅支援 iOS 下載 ]</strong><br><br>轉型辦公室近期推出的SuperAgent
+                            是一款協助同仁作業的<strong>實驗性APP</strong>，
+                            目前還在<strong>嘗試創新階段</strong>，初步功能發展中，
+                            在規劃設計上還有很多需要<strong>持續完備</strong>，
+                            開發團隊希望先<strong>聚焦集中火力</strong>找到對的方向，
+                            因此會以使用人數<strong>近九成的iOS系統</strong>來開發。</p>
                     </div>
                 </div>
             </div>
